@@ -73,7 +73,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": ">= 4.10.4 < 5.0.0"
+      "version_requirement": ">= 4.10.4 < 6.0.0"
     }
   ]
 }
